--- a/docker/php8.1-fpm/Dockerfile
+++ b/docker/php8.1-fpm/Dockerfile
@@ -37,6 +37,7 @@ RUN HASH=`curl -sS https://composer.github.io/installer.sig`
 
 RUN php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
 
+RUN chown -R www-data:www-data /var/www/magento
 
 CMD ["php-fpm"]
 
