--- a/config/nginx/magento.conf
+++ b/config/nginx/magento.conf
@@ -6,7 +6,7 @@ server {
     listen 80;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    server_name techworld.io.vn;
+    server_name _;
     set $MAGE_ROOT /var/www/magento;
     set $MAGE_DEBUG_SHOW_ARGS 1;
     include /var/www/magento/nginx.conf.sample;
