--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,56 +17,61 @@ env:
   VM_USER: ${{ secrets.VM_USER }}
   VM_PROJECT_DIR: /home/${{ secrets.VM_USER }}/magento-app # Đường dẫn thư mục project trên VM
 
-jobs:
-  build-and-push-images:
-    name: Build and Push Docker Images
-    runs-on: ubuntu-latest
-    permissions:
-      contents: 'read'
-      id-token: 'write' # Cần thiết cho Workload Identity Federation (khuyến nghị) hoặc sử dụng GCP_SA_KEY
+    jobs:
+      build-and-push-images:
+        name: Build and Push Docker Images
+        runs-on: ubuntu-latest
+        permissions:
+          contents: 'read'
+          id-token: 'write' # Cần thiết cho Workload Identity Federation
+          # HOẶC nếu bạn đang dùng service account key trực tiếp:
+          # permissions:
+          #   contents: 'read'
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+        steps:
+          - name: Checkout code
+            uses: actions/checkout@v4
 
-      - name: Authenticate to Google Cloud
-        uses: 'google-github-actions/auth@v2'
-        with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}' # Hoặc dùng Workload Identity Federation
-          # workload_identity_provider: 'projects/YOUR_PROJECT_NUMBER/locations/global/workloadIdentityPools/YOUR_POOL_ID/providers/YOUR_PROVIDER_ID'
-          # service_account: 'your-service-account-email@your-project-id.iam.gserviceaccount.com'
+          # Quan trọng: Bước xác thực với GCP
+          - name: Authenticate to Google Cloud
+            id: auth # Đặt ID cho bước này để có thể tham chiếu output
+            uses: 'google-github-actions/auth@v2'
+            with:
+              credentials_json: '${{ secrets.GCP_SA_KEY }}'
+              # Hoặc nếu dùng Workload Identity Federation (khuyến nghị):
+              # workload_identity_provider: 'projects/YOUR_PROJECT_NUMBER/locations/global/workloadIdentityPools/YOUR_POOL_ID/providers/YOUR_PROVIDER_ID'
+              # service_account: 'your-service-account-email@your-project-id.iam.gserviceaccount.com'
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+          - name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v3
 
-      - name: Login to Google Artifact Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.GCP_ARTIFACT_REGISTRY }}
-          username: oauth2accesstoken
-          password: ${{ steps.auth.outputs.access_token }} # Sử dụng access token từ bước 'Authenticate to Google Cloud'
-                                                          # nếu 'google-github-actions/auth' được cấu hình để xuất token
-                                                          # Hoặc, đơn giản hơn nếu dùng service account key trực tiếp:
-                                                          # username: _json_key
-                                                          # password: ${{ secrets.GCP_SA_KEY }}
+          - name: Login to Google Artifact Registry
+            uses: docker/login-action@v3
+            with:
+              registry: ${{ env.GCP_ARTIFACT_REGISTRY }}
+              username: oauth2accesstoken
+              # Lấy access_token từ output của bước 'auth'
+              password: ${{ steps.auth.outputs.access_token }}
+              # logout: true # Bật nếu bạn muốn logout sau khi push
 
-      - name: Build and push App image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./docker/php7.4-fpm # Đường dẫn tới Dockerfile của app
-          push: true
-          tags: |
-            ${{ env.GCP_ARTIFACT_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_IMAGE_REPO }}/${{ env.IMAGE_APP_NAME }}:latest
-            ${{ env.GCP_ARTIFACT_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_IMAGE_REPO }}/${{ env.IMAGE_APP_NAME }}:${{ github.sha }}
+          # ... các bước build và push image ...
+          - name: Build and push App image
+            uses: docker/build-push-action@v5
+            with:
+              context: ./docker/php7.4-fpm
+              push: true
+              tags: |
+                ${{ env.GCP_ARTIFACT_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_IMAGE_REPO }}/${{ env.IMAGE_APP_NAME }}:latest
+                ${{ env.GCP_ARTIFACT_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_IMAGE_REPO }}/${{ env.IMAGE_APP_NAME }}:${{ github.sha }}
 
-      - name: Build and push Elasticsearch image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./docker/elasticsearch # Đường dẫn tới Dockerfile của elasticsearch
-          push: true
-          tags: |
-            ${{ env.GCP_ARTIFACT_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_IMAGE_REPO }}/${{ env.IMAGE_ES_NAME }}:latest
-            ${{ env.GCP_ARTIFACT_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_IMAGE_REPO }}/${{ env.IMAGE_ES_NAME }}:${{ github.sha }}
+          - name: Build and push Elasticsearch image
+            uses: docker/build-push-action@v5
+            with:
+              context: ./docker/elasticsearch
+              push: true
+              tags: |
+                ${{ env.GCP_ARTIFACT_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_IMAGE_REPO }}/${{ env.IMAGE_ES_NAME }}:latest
+                ${{ env.GCP_ARTIFACT_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_IMAGE_REPO }}/${{ env.IMAGE_ES_NAME }}:${{ github.sha }}
 
   deploy-to-vm:
     name: Deploy to VM
